# robopulse

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
config/: default.json
data/: demo_loans.csv
src/robopulse/: __init__.py  config.py  controller.py  metrics.py  paths.py  runner.py
tests/: test_config.py
