[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "robopulse"
version = "0.1.0"
description = "RoboPulse — adaptive allocation control for Shimi-style multi-lender QPs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "numpy>=2.0,<3",
    "pandas>=2.0,<3",
    "plotly>=5.18,<6",
    "streamlit>=1.28,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
